--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
+spring.datasource.username=coding_events
+spring.datasource.password=Parolamysql123
 
+spring.jpa.database=MYSQL
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
